<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IdStatus"
            tools:layout_editor_absoluteY="21dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="15dp"
            android:text="@string/Titik_dua"
            app:layout_constraintEnd_toStartOf="@+id/tvIdStatusInput"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            tools:layout_editor_absoluteY="19dp" />

        <TextView
            android:id="@+id/tvIdStatusInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/IdStatus"
            app:layout_constraintBottom_toTopOf="@+id/tvWaktuUserInput"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaUserInput"
            tools:layout_editor_absoluteX="73dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="15dp"
            android:text="@string/Titik_dua"
            app:layout_constraintEnd_toStartOf="@+id/tvNamaUserInput"
            app:layout_constraintStart_toEndOf="@+id/textView14" />

        <TextView
            android:id="@+id/tvNamaUserInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama"
            app:layout_constraintBottom_toTopOf="@+id/tvIdStatusInput"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="73dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Waktu"
            tools:layout_editor_absoluteY="38dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="15dp"
            android:text="@string/Titik_dua"
            app:layout_constraintEnd_toStartOf="@+id/tvWaktuUserInput"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            tools:layout_editor_absoluteY="38dp" />

        <TextView
            android:id="@+id/tvWaktuUserInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/Waktu"
            app:layout_constraintBottom_toTopOf="@+id/tvStatusUserInput"
            app:layout_constraintTop_toBottomOf="@+id/tvIdStatusInput"
            tools:layout_editor_absoluteX="73dp" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="15dp"
            android:text="@string/Titik_dua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvStatusUserInput"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/tvStatusUserInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/tvWaktuUserInput" />
    </TableRow>

</TableLayout>
